--- a/php/reservations/navbar_reservations.html
+++ b/php/reservations/navbar_reservations.html
@@ -4,7 +4,7 @@
     <i class="fa fa-times"  onclick="hideMenu()"></i>
         <ul>
             <?php if ($admin) { ?>
-                <li><a href="../admin.php">ADMIN</a></li>
+                <li><a href="../admin/admin.php">ADMIN</a></li>
             <?php } ?>
 
             <li><a href="../index.php">HOME</a></li>
